[project]
name = "lsl-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "ezmsg>=3.6.2",
    "ezmsg-blackrock>=0.3.0",
    "ezmsg-lsl>=1.2.4",
    "marimo>=0.16.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "pylsl>=1.17.6",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]
