[project]
name = "lsl-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "ezmsg>=3.6.2",
    "ezmsg-blackrock>=0.3.0",
    "ezmsg-lsl>=1.2.4",
    "marimo>=0.16.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "pylsl>=1.17.6",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.14.0",
]
[project.scripts]
experiment = "lsl_comp:main"
analyse = "lsl_comp:analyse"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "basic"
